modules/gdscript/tests/scripts/parser/errors/immutable_var_unassigned_local.gd
func test():
	let immutable_local: float
